--- a/lab-michelle/package.json
+++ b/lab-michelle/package.json
@@ -1,11 +1,11 @@
 {
   "name": "lab-michelle",
   "version": "1.0.0",
-  "description": "",
+  "description": "Using react to make some note type thing",
   "main": "main.js",
   "scripts": {
-      "build": "webpack",
-      "watch": "webpack-dev-server --inline --hot"
+    "build": "webpack",
+    "watch": "webpack-dev-server --inline --hot"
   },
   "keywords": [],
   "author": "",
@@ -26,5 +26,6 @@
     "uuid": "^3.1.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
-  }
+  },
+  "dependencies": {}
 }
