--- a/lab-isaac/package.json
+++ b/lab-isaac/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01-pokemon-search",
+  "name": "NoteApp",
   "version": "1.0.0",
   "description": "",
   "main": "webpack.config.js",
